# harness-pro

./: .gitignore  05_martinfowler_harness-engineering.md  CLAUDE.md  HARNESS-ENGINEERING-IMPLEMENTATION-GUIDE.md  PROGRESSIVE-RULES-DESIGN.md  Qoder工程实践-Harness-Engineering指南.md  README.md  SUPERPOWERS-CALL-CHAIN.md  harness-executor-tester.sh  harness_pdf_extracted.txt  install.sh  investigation-final-synthesis.md  investigation-phase1-process-conflicts.md  investigation-phase2-quality-gaps.md  investigation-phase3-simplified-design.md  investigation-report-harness-philosophy.md  package.json  tsconfig.json  wechat_article_clean.html
.claude-plugin/: marketplace.json  plugin.json
agents/: doc-updater.md  e2e-runner.md  functional-tester.md  (+4 more)
mcp/utell-ios/: pyproject.toml  run.sh
mcp/utell-ios/src/utell_ios/: __init__.py  bridge_client.py  config.py  persistence.py  preview_loader.py  proxy.py  server.py  swift_parser.py  thunk_compiler.py  thunk_generator.py  ui_parser.py
mcp/utell-ios/src/utell_ios/native/: build_loader.sh  loader.m
mcp/utell-ios/tests/: conftest.py  test_preview_loader.py  test_server_build.py  test_thunk_compiler.py
test/task_manager/: .gitignore  README.md  TASKS.md  __init__.py  pyproject.toml  store.py  task.py
test/task_manager/task_manager/: __init__.py  models.py  store.py
test/task_manager/tasks/: task-001-scaffold.md  task-002-add-list.md  task-003-complete.md
test/task_manager/test/task_manager/: store.py
test/task_manager/tests/: __init__.py  test_complete.py  test_models.py  test_persistence.py  test_store.py  test_task.py
(+755 files in other folders)
