[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utell-ios"
version = "0.1.0"
description = "MCP Server wrapping WebDriverAgent and iOS simulator control"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
utell-ios = "utell_ios.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/utell_ios"]
# loader.dylib is built locally via build_loader.sh; not shipped as a pinned artifact.
